# unique

./: Makefile  README.md
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  unique.pc.in
src/doc/: Makefile.in
src/doc/reference/: Makefile.am  Makefile.in  unique-docs.xml  unique.types
src/doc/reference/html/: UniqueApp.html  UniqueBackend.html  index.html  ix01.html  license.html  unique-Message-Data.html  unique-Versioning-Information.html  unique-overview.html  unique.devhelp  unique.devhelp2
src/doc/reference/tmpl/: unique-app.sgml  unique-backend.sgml  unique-message.sgml  unique-version.sgml
src/doc/reference/xml/: annotation-glossary.xml  api-index-1.0.2.xml  api-index-deprecated.xml  api-index-full.xml  unique-app.xml  unique-backend.xml  unique-message.xml  unique-version.xml
src/tests/: Makefile.am  Makefile.in  test-unique.c
src/unique/: Makefile.am  Makefile.in  uniqueapp.c  uniquebackend.c  uniquebackend.h  uniqueinternals.h  uniquemarshal.c  uniquemessage.c  uniquemessage.h  uniqueversion.h
src/unique/bacon/: Makefile.in
src/unique/dbus/: Makefile.in  uniquebackend-bindings.h  uniquebackend-dbus.c
